# OctomapRaylibSimulation

./: CMakeLists.txt  README.md
data/: end.bt  end_p.ot  init.bt
src/: octomap-sim-ray.cpp  octomap-viz.cpp
